--- a/scripts/madrid_downscaling.ipynb
+++ b/scripts/madrid_downscaling.ipynb
@@ -150,8 +150,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "dd483aaf-9ea3-4d6a-be2c-ab48b17e3c88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Update metadata\n",
+    "meta.update(count = 1)\n",
+    "\n",
+    "output_path = '../madrid/LST_NDVI.tif'\n",
+    "\n",
+    "# Export\n",
+    "with rasterio.open(output_path, 'w', **meta) as dest:\n",
+    "    dest.write_band(1, temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "528df64c-1ac5-4985-a30b-fc10130586da",
    "metadata": {},
    "outputs": [],
    "source": []
