--- a/madrid/madrid_downscaling.ipynb
+++ b/madrid/madrid_downscaling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5795ea10-6d09-430f-af4d-676071a485b5",
    "metadata": {},
    "outputs": [
@@ -23,18 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "238294d6-5f6a-4708-94e4-76d532b6f6f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ndvi_path = '../madrid/sentinel/20230824T110619_StudyArea.tif'\n",
-    "lst_path = '../madrid/LST_StudyArea.tif'"
+    "ndvi_path = './sentinel/20230824T110619_StudyArea.tif'\n",
+    "lst_path = './lst/LST_20230824T212144_StudyArea.tif'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "0b23e907-b3d2-470f-95b1-cf4266ce0c3a",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "6ebe7d98-65dd-4afe-9f72-97fe1545e63e",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "cb4f75bf-56a2-4efa-9d67-9b25009dc768",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "dd483aaf-9ea3-4d6a-be2c-ab48b17e3c88",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
     "# Update metadata\n",
     "meta.update(count = 1)\n",
     "\n",
-    "output_path = '../madrid/LST_NDVI.tif'\n",
+    "output_path = lst_path.replace('.tif', '_downscaled.tif')\n",
     "\n",
     "# Export\n",
     "with rasterio.open(output_path, 'w', **meta) as dest:\n",
