--- a/scripts/compare_uhis.ipynb
+++ b/scripts/compare_uhis.ipynb
@@ -423,6 +423,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "SSMI: Structural Similarity Index Measure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Own results without buildings"
    ]
   },
