--- a/zaragoza/kriging.ipynb
+++ b/zaragoza/kriging.ipynb
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "808b883a-1334-4dc5-987e-b6b7204364e8",
    "metadata": {},
    "outputs": [
@@ -1038,7 +1038,7 @@
        "4        5  674458.88  4613093.96  0.349635  0.404729    0      0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "b35ac5d4-3f5b-4b1d-b237-9789ea75ef99",
    "metadata": {},
    "outputs": [
@@ -1235,7 +1235,7 @@
        "4        5  674458.88  4613093.96  0.349635  0.404729    0      0   1.109625"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "b9410f2c-3502-49a5-94cf-7a6844d40b47",
    "metadata": {},
    "outputs": [],
@@ -1268,10 +1268,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "6a4d127f-c5a7-4735-94e4-8e93c3c4abf3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'# Flatten the coordinates and raster bands\\nlons = lons.flatten()\\nlats = lats.flatten()\\nsvf = svf.flatten()\\nndvi = ndvi.flatten()\\nimd = imd.flatten()\\nswir2 = swir2.flatten()'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''# Flatten the coordinates and raster bands\n",
     "lons = lons.flatten()\n",
@@ -1284,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "6a8d8134-0f60-4d93-9878-0490711b2012",
    "metadata": {},
    "outputs": [],
@@ -1294,10 +1305,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "89a946ac-86e9-4d29-bd18-b77feea8e9bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"df['svf'] = svf\\ndf['imd'] = imd\\ndf['ndvi'] = ndvi\\ndf['swir2'] = swir2\\ndf['lat'] = lats\\ndf['lon'] = lons\""
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''df['svf'] = svf\n",
     "df['imd'] = imd\n",
@@ -1309,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "7d8f1d1f-c7e2-471d-9a29-34be60b91fc4",
    "metadata": {},
    "outputs": [],
@@ -1321,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "65d8d9d7-0f71-455e-ab4e-74a63d1df5fa",
    "metadata": {},
    "outputs": [],
@@ -1351,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "a503e0c0-b861-4f3f-a538-dd297ddfa09f",
    "metadata": {},
    "outputs": [],
@@ -1385,37 +1407,163 @@
    "id": "a853cb5a-3556-46cd-a88b-a9765572fa9c",
    "metadata": {},
    "source": [
-    "### Kriging with SWIR2"
+    "### Using Hyperopt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "906cd3ef-dba7-47bc-b0cd-d128f7584a18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "from hyperopt import fmin, tpe, hp, Trials, STATUS_OK"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "553c6d9d-6f2d-4554-8895-74de73b146b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the search space\n",
+    "search_space = {\n",
+    "    'variogram_model': hp.choice('variogram_model', ['linear', 'power', 'gaussian', 'exponential', 'spherical']),\n",
+    "    'drift_terms': hp.choice('drift_terms', [\n",
+    "        ['regional_linear'],\n",
+    "        ['regional_quadratic'],\n",
+    "        ['regional_linear', 'regional_quadratic']\n",
+    "    ])\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "ba7714fd-098e-46e7-aa84-406fac2c367c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the kriging cross-validation function\n",
+    "def kriging_cv(X, y, coordinates, variogram_model, drift_terms):\n",
+    "    kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "    rmse_scores = []\n",
+    "\n",
+    "    for train_index, test_index in kf.split(X):\n",
+    "        X_train, X_test = X[train_index], X[test_index]\n",
+    "        y_train, y_test = y[train_index], y[test_index]\n",
+    "        coord_train, coord_test = coordinates[train_index], coordinates[test_index]\n",
+    "\n",
+    "        # Create the Kriging model\n",
+    "        kriging_model = UniversalKriging(\n",
+    "            coord_train[:, 0], coord_train[:, 1], y_train,\n",
+    "            variogram_model=variogram_model,\n",
+    "            drift_terms=drift_terms\n",
+    "        )\n",
+    "\n",
+    "        # Predict test data\n",
+    "        y_pred = [kriging_model.execute('points', x[0], x[1])[0] for x in coord_test]\n",
+    "        rmse = mean_squared_error(y_test, y_pred, squared=False)\n",
+    "        rmse_scores.append(rmse)\n",
+    "\n",
+    "    return np.mean(rmse_scores)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "906cd3ef-dba7-47bc-b0cd-d128f7584a18",
+   "id": "8058944d-b397-4bac-8d91-259d0dc8c61b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Objective function for Hyperopt\n",
+    "def objective(params):\n",
+    "    variogram_model = params['variogram_model']\n",
+    "    drift_terms = params['drift_terms']\n",
+    "\n",
+    "    # Call the kriging cross-validation function\n",
+    "    rmse = kriging_cv(X, y, coordinates, variogram_model, drift_terms)\n",
+    "    return {'loss': rmse, 'status': STATUS_OK}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "8fa2f7cb-639c-4d0e-9a19-1a37f1e847ea",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average RMSE: 0.7436138111896318\n"
+      "100%|█████████| 50/50 [00:01<00:00, 27.53trial/s, best loss: 0.6279942660930268]\n",
+      "Best parameters: {'drift_terms': 1, 'variogram_model': 4}\n"
      ]
     }
    ],
    "source": [
-    "predictors = ['svf', 'imd', 'ndvi', 'swir2']\n",
-    "X = df[predictors].values\n",
-    "y = df['temp_diff'].values\n",
+    "# Run Hyperopt\n",
+    "trials = Trials()\n",
+    "best_params = fmin(\n",
+    "    fn=objective,\n",
+    "    space=search_space,\n",
+    "    algo=tpe.suggest,\n",
+    "    max_evals=50,\n",
+    "    trials=trials\n",
+    ")\n",
+    "\n",
+    "# Best parameters\n",
+    "print(\"Best parameters:\", best_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "daeea86d-ae02-45c0-80ed-5cf37381c550",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average RMSE: 0.6279942660930268\n"
+     ]
+    }
+   ],
+   "source": [
+    "def kriging_cross_validation2(X, y, coordinates):\n",
+    "    # Set cross validation\n",
+    "    kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "    rmse_scores = []\n",
+    "\n",
+    "    for train_index, test_index in kf.split(X):\n",
+    "        X_train, X_test = X[train_index], X[test_index]\n",
+    "        y_train, y_test = y[train_index], y[test_index]\n",
+    "        coord_train, coord_test = coordinates[train_index], coordinates[test_index]\n",
+    "\n",
+    "        kriging_model = UniversalKriging(\n",
+    "            coord_train[:, 0], coord_train[:, 1], y_train,\n",
+    "            variogram_model='spherical', drift_terms=['regional_quadratic']\n",
+    "        )\n",
+    "\n",
+    "        # Predict test data\n",
+    "        y_pred = [kriging_model.execute('points', x[0], x[1])[0] for x in coord_test]\n",
+    "        rmse = mean_squared_error(y_test, y_pred, squared=False)\n",
+    "        rmse_scores.append(rmse)\n",
+    "\n",
+    "    return np.mean(rmse_scores)\n",
     "\n",
     "# Compute RMSE\n",
-    "rmse_result = kriging_cross_validation(X, y, coordinates)\n",
+    "rmse_result = kriging_cross_validation2(X, y, coordinates)\n",
     "print(f\"Average RMSE: {rmse_result}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "553c6d9d-6f2d-4554-8895-74de73b146b3",
+   "id": "f2971789-0774-48d6-86dc-08c189bf2b50",
    "metadata": {},
    "outputs": [],
    "source": []
