Add reference station to the study

--- a/zaragoza/kriging2.ipynb
+++ b/zaragoza/kriging2.ipynb
@@ -3,7 +3,22 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b8fabd34-849f-455a-9a6e-6801acd1d825",
+   "id": "c2e26455-f99a-4d02-bcf6-ad0a721e9d56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopandas as gpd\n",
+    "import rasterio\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from pykrige.ok import OrdinaryKriging\n",
+    "from sklearn.metrics import mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5384d089-a94c-43e7-8805-b1e10c5174f2",
    "metadata": {},
    "outputs": [
     {
@@ -15,39 +30,25 @@
       "1        2  0.889060  0.178041  0.0    0.0   1.320874  41.649671 -0.884855\n",
       "2        3  0.963841  0.144677  0.0    0.0   1.069900  41.660269 -0.871698\n",
       "3        4  0.906010  0.215104  0.0    0.0   1.115054  41.646083 -0.900292\n",
-      "4        5  0.349635  0.404729  0.0    0.0   1.633224  41.650508 -0.904937\n",
-      "RMSE: 0.36\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'rasterio' has no attribute 'reproject'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 87\u001b[0m\n\u001b[1;32m     84\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mrasterio\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwarp\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m reproject\n\u001b[1;32m     86\u001b[0m template \u001b[38;5;241m=\u001b[39m svf_raster\n\u001b[0;32m---> 87\u001b[0m imd_raster \u001b[38;5;241m=\u001b[39m \u001b[43mrasterio\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreproject\u001b[49m(\n\u001b[1;32m     88\u001b[0m     source\u001b[38;5;241m=\u001b[39mimd_raster,\n\u001b[1;32m     89\u001b[0m     destination\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mzeros_like(template),\n\u001b[1;32m     90\u001b[0m     src_transform\u001b[38;5;241m=\u001b[39msrc\u001b[38;5;241m.\u001b[39mtransform,\n\u001b[1;32m     91\u001b[0m     dst_transform\u001b[38;5;241m=\u001b[39msvf_transform,\n\u001b[1;32m     92\u001b[0m     resampling\u001b[38;5;241m=\u001b[39mResampling\u001b[38;5;241m.\u001b[39mbilinear,\n\u001b[1;32m     93\u001b[0m )\n\u001b[1;32m     95\u001b[0m \u001b[38;5;66;03m# Perform kriging interpolation\u001b[39;00m\n\u001b[1;32m     96\u001b[0m ok \u001b[38;5;241m=\u001b[39m OrdinaryKriging(\n\u001b[1;32m     97\u001b[0m     points\u001b[38;5;241m.\u001b[39mgeometry\u001b[38;5;241m.\u001b[39mx, \n\u001b[1;32m     98\u001b[0m     points\u001b[38;5;241m.\u001b[39mgeometry\u001b[38;5;241m.\u001b[39my, \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    101\u001b[0m     variogram_parameters\u001b[38;5;241m=\u001b[39m[variogram_params[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msill\u001b[39m\u001b[38;5;124m'\u001b[39m], variogram_params[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrange\u001b[39m\u001b[38;5;124m'\u001b[39m], variogram_params[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnugget\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n\u001b[1;32m    102\u001b[0m )\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'rasterio' has no attribute 'reproject'"
+      "4        5  0.349635  0.404729  0.0    0.0   1.633224  41.650508 -0.904937\n"
      ]
     }
    ],
    "source": [
-    "# Install required packages (use pip install if not installed)\n",
-    "# pip install geopandas pykrige rasterio numpy pandas\n",
-    "\n",
-    "import geopandas as gpd\n",
-    "import rasterio\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from pykrige.ok import OrdinaryKriging\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "\n",
     "# Load the CSV file into a dataframe\n",
     "data = pd.read_csv(\"~/University/uhi/zaragoza/data.csv\")\n",
     "\n",
     "# Check the first few rows of the dataset\n",
-    "print(data.head())\n",
-    "\n",
+    "print(data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fcc7bc3e-3ab3-45e1-bcbd-f15f9566e3bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create a GeoDataFrame with spatial information\n",
     "points = gpd.GeoDataFrame(\n",
     "    data, \n",
@@ -62,8 +63,16 @@
     "folds = 10\n",
     "points['fold'] = np.random.randint(0, folds, data.shape[0])  # Randomly assign folds\n",
     "\n",
-    "residuals = []\n",
-    "\n",
+    "residuals = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "379918c7-57e9-4225-819c-d673bffdcd06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for fold in range(folds):\n",
     "    train = points[points['fold'] != fold]\n",
     "    test = points[points['fold'] == fold]\n",
@@ -85,12 +94,36 @@
     "    \n",
     "    # Predict on test set\n",
     "    z_pred, _ = ok.execute(\"points\", test.geometry.x, test.geometry.y)\n",
-    "    residuals.extend(y_test - z_pred)\n",
-    "\n",
+    "    residuals.extend(y_test - z_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "96e94399-4f36-4ff1-adb2-57841beb84d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 0.35\n"
+     ]
+    }
+   ],
+   "source": [
     "# Calculate RMSE\n",
     "rmse = np.sqrt(mean_squared_error([0] * len(residuals), residuals))\n",
-    "print(f\"RMSE: {rmse:.2f}\")\n",
-    "\n",
+    "print(f\"RMSE: {rmse:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "866b434d-9a08-4671-b8da-a0b12ed0b621",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# --- INTERPOLATION ---\n",
     "# Paths to the .tif files\n",
     "svf_path = \"../data/rasters/Zaragoza_ETRS89_Sky_View_Factor_scaled.tif\"\n",
@@ -111,16 +144,26 @@
     "    ndvi_raster = src.read(1)\n",
     "\n",
     "with rasterio.open(swir2_path) as src:\n",
-    "    swir2_raster = src.read(1)\n",
-    "\n",
+    "    swir2_raster = src.read(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a86f10a3-6af9-4e98-af38-da161d738112",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Ensure rasters have the same resolution and extent\n",
     "from rasterio.enums import Resampling\n",
     "from rasterio.warp import reproject\n",
     "\n",
     "template = svf_raster\n",
-    "imd_raster = rasterio.reproject(\n",
+    "imd_raster = reproject(\n",
     "    source=imd_raster,\n",
     "    destination=np.zeros_like(template),\n",
+    "    src_crs=src.crs,\n",
+    "    dst_crs=src.crs,\n",
     "    src_transform=src.transform,\n",
     "    dst_transform=svf_transform,\n",
     "    resampling=Resampling.bilinear,\n",
@@ -141,10 +184,18 @@
     "    np.arange(svf_transform[5], svf_transform[5] + template.shape[0] * svf_transform[4], svf_transform[4])\n",
     ")\n",
     "\n",
-    "z_pred, _ = ok.execute(\"grid\", grid_x, grid_y)\n",
-    "\n",
+    "z_pred, _ = ok.execute(\"grid\", grid_x, grid_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61d5b6d1-5c37-4fca-8333-6dcf188c862c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Save as GeoTIFF\n",
-    "output_path = \"~/University/uhi/zaragoza/interpolation_SVF+IMD+NDVI.tif\"\n",
+    "output_path = \"~/University/uhi/zaragoza/interpolation_SVF+IMD+NDVI_python.tif\"\n",
     "with rasterio.open(\n",
     "    output_path, \n",
     "    \"w\", \n",
@@ -160,6 +211,14 @@
     "\n",
     "print(f\"Interpolated raster saved at: {output_path}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f314e53-a8a6-42d4-a9dd-507f97ab25ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
