Kriging over Madrid

--- a/madrid/uhi_get_satellite_data.ipynb
+++ b/madrid/uhi_get_satellite_data.ipynb
@@ -30,18 +30,107 @@
    "execution_count": 2,
    "id": "21d99aa0-c1ca-4e04-b648-22db4dc0a338",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station</th>\n",
+       "      <th>temp_diff</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3.847117</td>\n",
+       "      <td>40.423882</td>\n",
+       "      <td>-3.712257</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8</td>\n",
+       "      <td>3.908468</td>\n",
+       "      <td>40.421553</td>\n",
+       "      <td>-3.682316</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>16</td>\n",
+       "      <td>3.634286</td>\n",
+       "      <td>40.440046</td>\n",
+       "      <td>-3.639242</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>18</td>\n",
+       "      <td>4.260863</td>\n",
+       "      <td>40.394782</td>\n",
+       "      <td>-3.731836</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>24</td>\n",
+       "      <td>2.925969</td>\n",
+       "      <td>40.419358</td>\n",
+       "      <td>-3.747344</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   station  temp_diff        lat       lon\n",
+       "0        4   3.847117  40.423882 -3.712257\n",
+       "1        8   3.908468  40.421553 -3.682316\n",
+       "2       16   3.634286  40.440046 -3.639242\n",
+       "3       18   4.260863  40.394782 -3.731836\n",
+       "4       24   2.925969  40.419358 -3.747344"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Temperature difference\n",
     "diffs = pd.read_csv('diff.csv', delimiter=',')\n",
-    "diffs.head()\n",
-    "\n",
-    "df = diffs"
+    "diffs.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "8bcd71c1-1e43-48c4-b9dd-6955a4bf597b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = diffs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "f656a215-53c2-46e8-ae5d-19f124b3a6e5",
    "metadata": {},
    "outputs": [],
@@ -63,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a701c08a-2db0-4570-b05c-b326f35e9692",
    "metadata": {},
    "outputs": [
@@ -143,7 +232,7 @@
        "4       24   2.925969  436598.5637  4474571.618"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "ea49c313-a3a2-4123-8300-db31fd228084",
    "metadata": {},
    "outputs": [],
@@ -166,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "5ba86981-3b88-471d-8e81-b5a6217a7a52",
    "metadata": {},
    "outputs": [
@@ -179,7 +268,7 @@
        " 'Madrid_ETR89_SVF.tif']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "22b7848c-6c85-4be2-a8f6-cdf5cfa796b9",
    "metadata": {},
    "outputs": [
@@ -248,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "984b1da2-dbd1-46b4-ba9d-7ab6e2cead27",
    "metadata": {},
    "outputs": [
@@ -297,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "0489e451-8c1c-42bd-902a-ab873d900694",
    "metadata": {},
    "outputs": [
@@ -346,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "b000fd90-41fd-4029-a445-e3e5cf4f9ad4",
    "metadata": {},
    "outputs": [
@@ -444,7 +533,7 @@
        "4       24   2.925969  436598.5637  4474571.618  0.990001  0.104219   52"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +544,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
+   "id": "26a9f4ad-0984-4c7b-a3e8-20ac063fb1e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station</th>\n",
+       "      <th>temp_diff</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>svf</th>\n",
+       "      <th>ndvi</th>\n",
+       "      <th>imd</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3.847117</td>\n",
+       "      <td>40.423882</td>\n",
+       "      <td>-3.712257</td>\n",
+       "      <td>0.578153</td>\n",
+       "      <td>0.107843</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8</td>\n",
+       "      <td>3.908468</td>\n",
+       "      <td>40.421553</td>\n",
+       "      <td>-3.682316</td>\n",
+       "      <td>0.720239</td>\n",
+       "      <td>0.329171</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>16</td>\n",
+       "      <td>3.634286</td>\n",
+       "      <td>40.440046</td>\n",
+       "      <td>-3.639242</td>\n",
+       "      <td>0.675009</td>\n",
+       "      <td>0.198323</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>18</td>\n",
+       "      <td>4.260863</td>\n",
+       "      <td>40.394782</td>\n",
+       "      <td>-3.731836</td>\n",
+       "      <td>0.385797</td>\n",
+       "      <td>0.187602</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>24</td>\n",
+       "      <td>2.925969</td>\n",
+       "      <td>40.419358</td>\n",
+       "      <td>-3.747344</td>\n",
+       "      <td>0.990001</td>\n",
+       "      <td>0.104219</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   station  temp_diff        lat       lon       svf      ndvi  imd\n",
+       "0        4   3.847117  40.423882 -3.712257  0.578153  0.107843   74\n",
+       "1        8   3.908468  40.421553 -3.682316  0.720239  0.329171    0\n",
+       "2       16   3.634286  40.440046 -3.639242  0.675009  0.198323   63\n",
+       "3       18   4.260863  40.394782 -3.731836  0.385797  0.187602    0\n",
+       "4       24   2.925969  40.419358 -3.747344  0.990001  0.104219   52"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Transform back to WGS 84\n",
+    "transformer = Transformer.from_crs('EPSG:25830', 'EPSG:4326')\n",
+    "\n",
+    "# Iterate over each station\n",
+    "for index, row in df.iterrows():\n",
+    "    xx = row['lat']\n",
+    "    yy = row['lon']\n",
+    "    lat, lon = transformer.transform(xx, yy)\n",
+    "    # Update coordinates in dataset\n",
+    "    df.at[index, 'lat'] = lat\n",
+    "    df.at[index, 'lon'] = lon\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "08c267ea-321a-44e2-97c8-7adaaf5ef13e",
    "metadata": {},
    "outputs": [],
