--- a/zaragoza/normalize.ipynb
+++ b/zaragoza/normalize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "d988ddf5-6a32-42fc-b0d9-3c3f98defa6a",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b7068d1b-3de7-4e78-ae58-97dd84c9266b",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "89482cef-18f6-43b8-a5a2-2472f87ae3e5",
    "metadata": {},
    "outputs": [],
@@ -133,8 +133,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cdf2c9f1-5535-46b3-9d2f-9133fd90c502",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normalized raster saved to ../../madrid/rasters/Madrid_ETR89_IMD_normalized.tif\n"
+     ]
+    }
+   ],
+   "source": [
+    "normalize('../../madrid/rasters/Madrid_ETR89_IMD.tif')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b2e99d1-43b6-4ec9-97b5-77ae49f991b9",
    "metadata": {},
    "outputs": [],
    "source": []
